# agent-escrow

./: .gitignore  Anchor.toml  Cargo.toml  README.md  foundry.toml
agent/: autonomous_agent.py
client/: package.json
client/src/: agent.ts  escrow.ts  index.ts  oobe.ts  reputation.ts  wallet.ts  world-id.ts
contracts/: AgentEscrow.sol  ServiceRegistry.sol  TECHPaymentRouter.sol
demo/: index.html
docs/: ARCHITECTURE.md  SPRINT-PLAN.md  SUBMISSION.md  social-posts.md
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: errors.rs  lib.rs  state.rs
programs/agent-registry/src/instructions/: deactivate_agent.rs  link_metaplex_identity.rs  mod.rs  register_agent.rs  update_agent.rs  verify_world_id.rs
programs/colosseum-programs/: Cargo.toml
programs/colosseum-programs/src/: agent_registry.rs  dispute_resolver.rs  errors.rs  job_escrow.rs  lib.rs  reputation.rs
programs/colosseum-programs/tests/: test_initialize.rs
programs/dispute-resolver/: Cargo.toml
programs/dispute-resolver/src/: errors.rs  lib.rs  state.rs
programs/dispute-resolver/src/instructions/: create_dispute.rs  mod.rs  resolve_dispute.rs  submit_evidence.rs
programs/job-escrow/: Cargo.toml
programs/job-escrow/src/: errors.rs  lib.rs  state.rs
programs/job-escrow/src/instructions/: accept_job.rs  approve_work.rs  cancel_job.rs  dispute_job.rs  mod.rs  post_job.rs  refund_expired.rs  submit_work.rs
programs/reputation/: Cargo.toml
programs/reputation/src/: errors.rs  lib.rs  state.rs
programs/reputation/src/instructions/: mint_nft.rs  mod.rs  rate_agent.rs  update_reputation.rs
test/: AgentEscrow.t.sol  ServiceRegistry.t.sol  TECHPaymentRouter.t.sol
tests/: index.ts  test_autonomous_agent.py
