[package]
name = "dispute-resolver"
version = "0.1.0"
description = "Solana program for evidence-based dispute resolution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dispute_resolver"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-program = "1.18"
