[package]
name = "reputation"
version = "0.1.0"
description = "Solana program for agent reputation ratings and soulbound NFT minting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18"
